# Scherf_API

./: .gitignore  README.md  demo.py  opus-briefing-package.md  pyproject.toml
docs/: axiom-catalogue.md  limits.md  task1-design.md  task2-audit.md  task2-pedagogical-assessment.md  task3-validation-report.md
scherf/: README.md  __init__.py  engine.py  errors.py  levels.py  ontology.py  report.py  sorts.py
scherf/axioms/: __init__.py  additional.py  awareness.py  core.py  event.py  jiva.py  levels.py  maya.py  state.py  temporal.py
tests/: test_axioms.py  test_engine.py  test_module1.py  test_state.py
